# taskwarrior

./: .pre-commit-config.yaml  CMakeLists.txt  ChangeLog  INSTALL  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: checks.yml  docker-image.yaml  metadata-check.sh  tests.yaml
cmake/: CXXSniffer.cmake
doc/devel/contrib/: development.md
doc/devel/rfcs/: task.md
doc/man/: task-sync.5.in  task.1.in
src/: CMakeLists.txt  Context.cpp  Operation.cpp  Operation.h  TDB2.cpp  TDB2.h  TF2.cpp  TF2.h  Task.cpp  feedback.cpp  main.h  recur.cpp
src/commands/: CMakeLists.txt  CmdAdd.cpp  CmdAliases.cpp  CmdAnnotate.cpp  CmdAppend.cpp  CmdAttributes.cpp  CmdBurndown.cpp  CmdCalc.cpp  CmdCalendar.cpp  CmdColor.cpp  CmdColumns.cpp  CmdCommands.cpp  CmdConfig.cpp  CmdContext.cpp  CmdCount.cpp  CmdCustom.cpp  CmdDelete.cpp  CmdDenotate.cpp  CmdDiagnostics.cpp  CmdDone.cpp  CmdDuplicate.cpp  CmdEdit.cpp  CmdExec.cpp  CmdExport.cpp  CmdGet.cpp  CmdHelp.cpp  CmdHistory.cpp  CmdIDs.cpp  CmdImport.cpp  CmdImportV2.cpp  CmdImportV2.h  CmdInfo.cpp  CmdLog.cpp  CmdLogo.cpp  CmdModify.cpp  CmdNews.cpp  CmdNews.h  CmdPrepend.cpp  CmdProjects.cpp  CmdPurge.cpp  (+16 more)
src/taskchampion-cpp/: Cargo.toml
src/taskchampion-cpp/src/: lib.rs
src/tc/: CMakeLists.txt
test/: CMakeLists.txt  commands.test.py  import-v2.test.py  make_tc_task.cpp  read-only.test.py  tdb2_test.cpp  unusual_task.test.py  util_test.cpp  view_test.cpp
test/basetest/: utils.py
test/docker/: fedora41
