[package]
name = "taskchampion-lib"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.73.0"  # MSRV

[lib]
crate-type = ["staticlib"]

[dependencies]
taskchampion = "0.9.0"
cxx = "1.0.133"

[features]
# use native CA roots, instead of bundled
tls-native-roots = ["taskchampion/tls-native-roots"]

[build-dependencies]
cxx-build = "1.0.133"
